refactor: 默认 controls 可以控制旋转、平移、缩放视图

--- a/index.html
+++ b/index.html
@@ -10,19 +10,6 @@
   <body>
     <div id="root"></div>
     <div class="controls ui-container">
-      <label>
-        关节类型:
-        <select id="joint-types">
-          <option value="elbow">Elbow</option>
-          <option value="ball">Ball</option>
-          <option value="mixed" selected>Mixed</option>
-          <option value="cycle">Cycle</option>
-        </select>
-      </label>
-      <button id="toggle-controls">
-        <span class="normal-controls-enabled">Control Camera</span>
-        <span hidden class="orbit-controls-enabled">Relinquish Camera</span>
-      </button>
       <table>
         <thead>
           <tr>
@@ -31,23 +18,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="normal-controls-enabled">
-            <td>鼠标左键</td>
-            <td>切换视图</td>
-          </tr>
-          <tr class="normal-controls-enabled">
-            <td>鼠标右键</td>
-            <td>清除管道并重新构建</td>
-          </tr>
-          <tr hidden class="orbit-controls-enabled">
+          <tr class="orbit-controls-enabled">
             <td>鼠标左键 (拖拽)</td>
             <td>旋转视图</td>
           </tr>
-          <tr hidden class="orbit-controls-enabled">
+          <tr class="orbit-controls-enabled">
             <td>鼠标右键 (拖拽)</td>
             <td>平移视图</td>
           </tr>
-          <tr hidden class="orbit-controls-enabled">
+          <tr class="orbit-controls-enabled">
             <td>鼠标中间 (拖拽 or 滚动)</td>
             <td>缩放视图</td>
           </tr>
